packages/rocket/rocket-0.4.10/core/codegen/tests/ui-fail/uri_display_type_errors.stderr
error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::Query>` is not satisfied
 --> $DIR/uri_display_type_errors.rs:6:13
  |
6 | struct Bar1(BadType);
  |             ^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `BadType`
  |
  = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&BadType`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::Query>` is not satisfied
  --> $DIR/uri_display_type_errors.rs:11:5
   |
11 |     field: BadType,
   |     ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `BadType`
   |
   = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&BadType`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::Query>` is not satisfied
  --> $DIR/uri_display_type_errors.rs:18:5
   |
18 |     bad: BadType,
   |     ^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `BadType`
   |
   = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&BadType`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::Query>` is not satisfied
  --> $DIR/uri_display_type_errors.rs:24:11
   |
24 |     Inner(BadType),
   |           ^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `BadType`
   |
   = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&BadType`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&&BadType`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::Query>` is not satisfied
  --> $DIR/uri_display_type_errors.rs:31:9
   |
31 |         field: BadType,
   |         ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `BadType`
   |
   = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&BadType`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&&BadType`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::Query>` is not satisfied
  --> $DIR/uri_display_type_errors.rs:40:9
   |
40 |         other: BadType,
   |         ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::Query>` is not implemented for `BadType`
   |
   = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&BadType`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Query>` for `&&BadType`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::Path>` is not satisfied
  --> $DIR/uri_display_type_errors.rs:46:12
   |
46 | struct Baz(BadType);
   |            ^^^^^^^ the trait `UriDisplay<rocket::http::uri::Path>` is not implemented for `BadType`
   |
   = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::Path>` for `&BadType`
